changed the function OneStep to return the ProgramStates instead of boolean